# inline-test-ppx

./: .gitattributes  .spin  CONTRIBUTING.md  LICENSE  README.md  dune  dune-project  esy.json  inline-test-ppx.opam
.github/workflows/: ci.yml  release.yml
esy.lock/: index.json
lib/: bs_config.ml  bs_config.mli  dune  file_generation.ml  file_generation.mli  inline_test_ppx.ml
project_sample/: .gitignore  bsconfig.json  package.json  test.mjs
project_sample/src/: Demo.res  Demo.resi
script/: release-make-skeleton.js  release-postinstall.js  release.sh
test/: dune
test/support/: test_runner.ml
