(library
 (name inline_test_ppx_test)
 (libraries alcotest inline-test-ppx)
 (modules
  (:standard \ test_runner))
 (preprocess
  (pps inline-test-ppx))
 (flags
  (:standard -linkall -g -open StdLabels -w -70)))

(executable
 (name test_runner)
 (libraries alcotest inline_test_ppx_test)
 (modules test_runner)
 (preprocess
  (pps inline-test-ppx))
 (flags
  (:standard -open StdLabels -w -70)))

(rule
 (alias runtest)
 (action
  (run ./test_runner.exe -q --color=always)))

(include_subdirs unqualified)
